--- a/account/templates/account/detail.html
+++ b/account/templates/account/detail.html
@@ -10,14 +10,14 @@
         <p>{{ viewed_user.profile_text|linebreaks }}</p>
     {% endif %}
     {% if friendship %}
-        {% if viewed_user.photo %}<img src="{{ viewed_user.photo.url }}" class="user-photo">{% endif %}
+        {% if viewed_user.image %}<img src="{{ viewed_user.image.url }}" class="user-photo">{% endif %}
         <p><a href="{% url 'chat:chat_room' 'account' 'friendship' friendship.id %}">{% trans "Zum Chat" %}...</a></p>
         <p>{% trans "Voller Name" %}: {{ viewed_user.get_full_name }}</p>
         <p>{{ viewed_user.username }} {% trans "ist Mitglied folgender Aktivitäten" %}:</p>
         {% include "activity/loop.html" with activities=viewed_user.activities %}
         <div class="profile-rest">
             <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
-            <p>{% trans "Sie sind mit" %} {{ viewed_user.get_full_name }}{% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
+            <p>{% trans "Sie sind mit" %} {{ viewed_user.get_full_name }} {% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
             {% else %}
                 {% blocktrans with user=viewed_user.username%}Sie sind nicht mit {{ user }} befreundet{% endblocktrans %}.
                 {% if requested %}
