--- a/account/templates/account/friend_requests_list.html
+++ b/account/templates/account/friend_requests_list.html
@@ -2,28 +2,22 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% blocktrans %}Freundschaftsanfragen{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans %}Anfragen{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1>{% blocktrans %}Eingegangene Freundschaftsanfragen{% endblocktrans %}</h1>
+    <h1>{% blocktrans %}Anfragen{% endblocktrans %}</h1>
+    <h2>Eingegangen</h2>
+    {% if received_friend_requests %}
     <table>
         <tr>
             <th>{% blocktrans %}Nutzername{% endblocktrans %}</th>
             <th>{% blocktrans %}Nachricht{% endblocktrans %}</th>
-            <th>{% blocktrans %}Status{% endblocktrans %}</th>
             <th>{% blocktrans %}Aktion{% endblocktrans %}</th>
         </tr>
         {% for request in received_friend_requests %}
             <tr>
                 <td><a href="{% url 'account:detail' request.requesting_user.username %}">{{ request.requesting_user.username }}</a></td>
                 <td>{{ request.request_message }}</td>
-                <td>
-                    {% if request in changed_requests %}
-                        <b>{{ request.get_status_display }}</b>
-                    {% else %}
-                        {{ request.get_status_display }}
-                    {% endif %}
-                </td>
                 <td>
                     {% if request.status == 'pending' %}
                         <a href="{% url 'account:accept_request' request.id %}">{% blocktrans %}Annehmen{% endblocktrans %}</a> <a href="{% url 'account:decline_request' request.id %}">{% blocktrans %}Ablehnen{% endblocktrans %}</a>
@@ -34,26 +28,21 @@
             </tr>
         {% endfor %}
     </table>
-    <h1>{% blocktrans %}Gesendete Freundschaftsanfragen{% endblocktrans %}</h1>
-    <p><a href="{% url 'account:send_custom_friend_request' %}">{% blocktrans %}Eine Anfrage an einen Nutzer senden...{% endblocktrans %}</a></p>
+    {% else %}
+    <p>{% trans "Keine Anfragen." %}</p>
+    {% endif %}
+    <h2>{% blocktrans %}Gesendet{% endblocktrans %}</h2>
+    {% if sent_friend_requests %}
     <table>
         <tr>
             <th>{% blocktrans %}Nutzername{% endblocktrans %}</th>
             <th>{% blocktrans %}Nachricht{% endblocktrans %}</th>
-            <th>{% blocktrans %}Status{% endblocktrans %}</th>
             <th>{% blocktrans %}Aktion{% endblocktrans %}</th>
         </tr>
         {% for request in sent_friend_requests %}
             <tr>
                 <td><a href="{% url 'account:detail' request.requested_user.username %}">{{ request.requested_user.username }}</a></td>
                 <td>{{ request.request_message }}</td>
-                <td>
-                    {% if request in changed_requests %}
-                        <b>{{ request.get_status_display }}</b>
-                    {% else %}
-                        {{ request.get_status_display }}
-                    {% endif %}
-                </td>
                 <td>
                     {% if request.status != 'declined' %}
                         <a href="{% url 'account:delete_request' request.id %}">{% blocktrans %}Löschen{% endblocktrans %}</a>
@@ -62,14 +51,18 @@
             </tr>
         {% endfor %}
     </table>
+    {% else %}
+    <p>{% trans "Keine." %}</p>
+    {% endif %}
+    <p><a href="{% url 'account:send_custom_friend_request' %}" style="font-style: italic;">{% blocktrans %}Eine Anfrage an einen Nutzer senden...{% endblocktrans %}</a></p>
     <h1>{% blocktrans %}Freunde{% endblocktrans %}</h1>
     <div class="activity-horizontal-list">
         {% for user in user.friends %}
             <div class="item">
                 {% load thumbnail %}
                 <a href="{{ user.get_absolute_url }}">
-                {% if user.photo %}
-                <img src="{% thumbnail user.photo 100x100 %}" class="photo"></a>
+                {% if user.image %}
+                <img src="{% thumbnail user.image 100x100 %}" class="photo"></a>
                 {% else %}
                 <img src="{% static 'icons/users-and-groups-user@32px.png' %}" width="100">
                 {% endif %}
