--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -13,6 +13,7 @@
         {% include 'style/chatmenu.css' %}
         {% include 'style/queries.css' %}
     </style>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/users-and-groups-group@32px.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -34,10 +35,10 @@
                 </a>
             </div>
             <div class="profile">
-            {% if user.photo %}
+            {% if user.image %}
                 {% load thumbnail %}
                 <a href="{% url 'account:edit' %}" id="profile-image">
-                    <img src="{% thumbnail user.photo 32x0 %}" style="border-radius: 50%;">
+                    <img src="{% thumbnail user.image 32x0 %}" style="border-radius: 50%;">
                 </a>
             {% endif %}
             <a href="{% url 'account:edit' %}" id="profile-link">{{ user }}</a>
