--- a/account/templates/style/topmenu.css
+++ b/account/templates/style/topmenu.css
@@ -11,6 +11,7 @@
     font-family: "Courier New", "Lucida Console", monospace;
     margin-bottom: 10px;
     overflow: hidden;
+    height: 40px;
 }
 
 .topmenu .logo {
