--- a/activity/templates/activity/loop.html
+++ b/activity/templates/activity/loop.html
@@ -1,11 +1,15 @@
+{% load i18n %}
+
 <div class="activity-horizontal-list">
     {% for activity in activities.all %}
-        <div class="item">
-            {% load thumbnail %}
-            <a href="{{ activity.get_absolute_url }}"><img src="{% thumbnail activity.image 100x100 %}" class="photo"></a>
-            <div class="title">
-                {{ activity }}
-            </div>
+    <div class="item" onclick="location.href='{{ activity.get_absolute_url }}'">
+        {% load thumbnail %}
+        <img src="{% thumbnail activity.image 100x100 %}" class="photo">
+        <div class="title">
+            {{ activity }}
         </div>
-{% endfor %}
+    </div>
+    {% empty %}
+        <b>{% trans "Keine!" %}</b>
+    {% endfor %}
 </div>
