--- a/usergroups/templates/usergroups/category_group_list.html
+++ b/usergroups/templates/usergroups/category_group_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
 {% block title %}{{ category.name }}-{% trans "Gruppen" %}{% endblock %}
 
@@ -8,22 +9,5 @@
     </h1>
     <h3><a href="{% url 'usergroups:create_group' category.id %}">{% trans "Gruppe erstellen" %}...</a></h3>
     {% include 'activity/location_selection.html' %}
-    <table>
-        <tr>
-            <th>{% trans "Name" %}</th>
-            <th>{% trans "Beschreibung" %}</th>
-            <th>{% trans "Leerstellen" %}</th>
-            <th>{% trans "Ort" %}</th>
-        </tr>
-        {% for group in groups %}
-            {% if group.public %}
-                <tr>
-                    <td><a href="{{ group.get_absolute_url }}">{{ group.name }}</a></td>
-                    <td>{{ group.description|truncatewords:30 }}</td>
-                    <td>{{ group.vacancies.all|length }}</td>
-                    <td>{{ group.admin.location }}</td>
-                </tr>
-            {% endif %}
-        {% endfor %}
-    </table>
+    {% include 'usergroups/loop.html' %}
 {% endblock %}
