--- a/usergroups/templates/usergroups/edit_group.html
+++ b/usergroups/templates/usergroups/edit_group.html
@@ -6,7 +6,7 @@
 {% block content %}
     <h1>{% trans "Bearbeiten von" %} "{{ group.name }}"</h1>
     <p>{% trans "Gruppe gehört zu" %}: <a href="{{ group.category.get_absolute_url }}">{{ group.category.verbose }}</a></p>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% trans "Fertig" %}">
