--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -12,6 +12,7 @@
         {% include 'style/sidemenu.css' %}
         {% include 'style/chatmenu.css' %}
         {% include 'style/queries.css' %}
+        {% block style %}{% endblock %}
     </style>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/users-and-groups-group@32px.png' %}">
