--- a/account/templates/style/sidemenu.css
+++ b/account/templates/style/sidemenu.css
@@ -1,7 +1,7 @@
 .sidemenu {
     float: left;
     height: 100%;
-    max-width: 250px;
+    width: 250px;
     font-family: "Courier New", "Lucida Console", monospace;
     overflow-y: auto;
     margin-right: 20px;
