--- a/multiplayer/templates/multiplayer/skat.html
+++ b/multiplayer/templates/multiplayer/skat.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account_tags %}
 
-{% block title %}Durak{% endblock %}
+{% block title %}Skat{% endblock %}
 {% block style %}{% include 'css/game.css' %}{% endblock %}
 
 {% block content %}
@@ -39,5 +39,5 @@
 
 {% block domready %}
     {% include 'javascript/cards.js' %}
-    {% include 'javascript/durak.js' %}
+    {% include 'javascript/skat.js' %}
 {% endblock %}
