--- a/account/templates/style/queries.css
+++ b/account/templates/style/queries.css
@@ -3,11 +3,6 @@
         width: 100%;
     }
 
-    .game {
-        position: absolute;
-        left: 0;
-    }
-
     .sidemenu .alert .notification-url {
         width: 80%;
     }
@@ -18,6 +13,8 @@
         position: absolute;
         top: 50px;
         left: 5px;
+        right: 5px;
+        bottom: 5px;
     }
 
     .topmenu .logo .icon {
@@ -27,33 +24,28 @@
     .sidemenu {
         display: none;
     }
-
-    .sidemenu.clicked {
-        background-color: black;
-        display: block;
-        position: fixed;
-        top: 0;
-        right: 0;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        z-index: 1000;
-        min-width: 50vw;
-        padding: 5px;
-        margin-right: 0;
-    }
 }
 
 @media screen and (min-width: 1220px) {
-    html {
+    .base-container {
         width: 1200px;
         height: 100%;
         margin-left: auto;
         margin-right: auto;
     }
+    .content {
+        left: 250px;
+    }
+    .sidemenu {
+        display: block;
+    }
+    .topmenu .logo .icon {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 1420px) {
-    html {
+    .base-container {
         width: 1400px;
         height: 100%;
         margin-left: auto;
@@ -62,8 +54,11 @@
 
     .chat-menu {
         display: block;
-        width: 300px;
+        width: 250px;
+    }
 
+    .content {
+        right: 250px;
     }
 
     .envelope {
