--- a/account/templates/style/sidemenu.css
+++ b/account/templates/style/sidemenu.css
@@ -1,10 +1,24 @@
 .sidemenu {
-    float: left;
-    height: 100%;
-    width: 250px;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    max-width: 250px;
     font-family: "Courier New", "Lucida Console", monospace;
     overflow-y: auto;
-    margin-right: 20px;
+    display: none;
+}
+
+.sidemenu.clicked {
+    background-color: black;
+    display: block;
+    position: fixed;
+    top: 50px;
+    right: 0;
+    overflow: auto;
+    z-index: 1000;
+    max-width: 250px;
+    padding: 5px;
+    margin-right: 0;
 }
 
 .sidemenu .alert {
