--- a/multiplayer/templates/css/game.css
+++ b/multiplayer/templates/css/game.css
@@ -1,5 +1,13 @@
 {% load static %}
 
+.base-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 .game {
     position: absolute;
     left: 0px;
@@ -84,4 +92,10 @@
     overflow: hidden;
     border: 1px solid gray;
     background-color: green;
+}
+
+.join-audio {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
