--- a/account/templates/style/chatmenu.css
+++ b/account/templates/style/chatmenu.css
@@ -1,10 +1,12 @@
 .chat-menu {
-    float: right;
+    position: absolute;
+    right: 0;
+    top: 50px;
+    width: 100px;
     background-color: black;
     color: white;
     font-family: "Courier New", "Lucida Console", monospace;
     display: none;
-    width: 50%;
 }
 
 .chat-menu.clicked {
