--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -8,10 +8,14 @@ body {
     height: 100%;
 }
 
+.base-container {
+    position: relative;
+}
+
 .content {
     position: absolute;
     top: 50px;
-    left: 280px;
+    left: 5px;
     right: 5px;
     bottom: 5px;
     color: white;
