--- a/multiplayer/templates/multiplayer/skat.html
+++ b/multiplayer/templates/multiplayer/skat.html
@@ -34,10 +34,15 @@
             
         </div>
     </div>
+    <div class="join-audio">
+        <button id="join-audio" onclick="joinAudio();">Beitreten</button>
+    </div>
 </div>
 {% endblock %}
 
 {% block domready %}
+    {% include 'javascript/ws-audio-api.min.js' %}
     {% include 'javascript/cards.js' %}
     {% include 'javascript/skat.js' %}
+    {% include 'javascript/audiochat.js' %}
 {% endblock %}
