--- a/multiplayer/templates/css/game.css
+++ b/multiplayer/templates/css/game.css
@@ -99,3 +99,14 @@
     right: 0;
     bottom: 0;
 }
+
+.info-alert {
+    background-color: black;
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 15%;
+    right: 15%;
+    border-radius: 10px;
+}
