--- a/multiplayer/templates/multiplayer/skat.html
+++ b/multiplayer/templates/multiplayer/skat.html
@@ -7,37 +7,7 @@
 {% block style %}{% include 'css/game.css' %}{% endblock %}
 
 {% block content %}
-
-<div class="game">
-    <div class="back">
-        <a href="{% call_method match 'lobby_url' request %}">Lobby</a>
-    </div>
-    <div class="leave">
-        <a href="{% url 'multiplayer:leave_match' match.id %}">{% trans "Ciao!" %}</a>
-    </div>
-    <div class="game-field">
-        
-    </div>
-    <div class="player1-info" id="player1">
-        
-    </div>
-    <div class="player2-info">
-        <div class="text" id="player2">
-            
-        </div>
-    </div>
-    <div class="player3-info" id="player3">
-        
-    </div>
-    <div class="player4-info">
-        <div class="text" id="player4">
-            
-        </div>
-    </div>
-    <div class="join-audio">
-        <button id="join-audio" onclick="joinAudio();">Beitreten</button>
-    </div>
-</div>
+{% include 'multiplayer/game.html' %}
 {% endblock %}
 
 {% block domready %}
