--- a/multiplayer/templates/multiplayer/doppelkopf.html
+++ b/multiplayer/templates/multiplayer/doppelkopf.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account_tags %}
 
-{% block title %}Durak{% endblock %}
+{% block title %}Doppelkopf{% endblock %}
 {% block style %}{% include 'css/game.css' %}{% endblock %}
 
 {% block content %}
@@ -14,6 +14,6 @@
     {% include 'javascript/ws-audio-api.min.js' %}
     {% include 'javascript/cards.js' %}
     {% include 'javascript/connect.js' %}
-    {% include 'javascript/durak.js' %}
+    {% include 'javascript/doppelkopf.js' %}
     {% include 'javascript/audiochat.js' %}
 {% endblock %}
