--- a/multiplayer/templates/multiplayer/skat.html
+++ b/multiplayer/templates/multiplayer/skat.html
@@ -13,6 +13,7 @@
 {% block domready %}
     {% include 'javascript/ws-audio-api.min.js' %}
     {% include 'javascript/cards.js' %}
+    {% include 'javascript/connect.js' %}
     {% include 'javascript/skat.js' %}
     {% include 'javascript/audiochat.js' %}
 {% endblock %}
