--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -15,9 +15,10 @@ body {
 .content {
     position: absolute;
     top: 50px;
-    left: 5px;
+    left: 0px;
     right: 5px;
     bottom: 5px;
+    padding-left: 5px;
     color: white;
     font-family: "Courier New", "Lucida Console", monospace;
 }
