--- a/multiplayer/templates/css/game.css
+++ b/multiplayer/templates/css/game.css
@@ -44,6 +44,20 @@
     text-decoration: none;
 }
 
+.game-button {
+    z-index: 100;
+    position: absolute;
+    border: 1px solid white;
+    color: white;
+    background-color: black;
+    opacity: 0.6;
+    border-radius: 5px;
+}
+
+.game-button:hover {
+    background-color: gray;
+}
+
 .game::selection {
     background: transparent;
 }
