--- a/account/templates/account/detail.html
+++ b/account/templates/account/detail.html
@@ -16,7 +16,7 @@
         {% include "activity/loop.html" with activities=viewed_user.activities %}
         <div class="profile-rest">
             <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
-            <p>{% trans "Sie sind mit" %} {{ viewed_user.get_full_name }} {% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
+            <p>{% trans "Sie sind mit" %} {{ viewed_user }} {% trans "befreundet. Falls Sie das ändern möchten, können Sie die Freundschaft" %} <a href="{% url 'account:destroy_friendship' viewed_user.id %}">{% trans "auch vernichten" %}.</a></p>
             {% else %}
                 {% blocktrans with user=viewed_user.username%}Sie sind nicht mit {{ user }} befreundet{% endblocktrans %}.
                 {% if requested %}
