--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -22,8 +22,9 @@
     <p>{{ activity.description }}</p>
         {% if is_member %}
             <p>
-            {% trans "Sie sind Mitglied dieser Aktivität" %}. <a href="{% url 'activity:leave' activity.name %}">{% trans "Austreten" %}...</a>
+            {% trans "Sie sind Mitglied dieser Aktivität" %}.
             </p>
+            <a href="{% url 'activity:leave' activity.name %}"><button class="blue-button">{% trans "Austreten" %}</button></a>
             <h3>{% trans "Suche nach Mitgliedern" %}</h3>
             <p>{% include 'activity/location_selection.html' %}</p>
             {% if users %}
@@ -38,8 +39,9 @@
             {% endif %}
         {% else %}
             <p>
-                {% trans "Sie sind noch kein Mitglied. Falls Sie sehen wollen, wer in Ihrer Umgebung Teil dieser Aktivität ist" %}, <a href="{% url 'activity:join' activity.name %}">{% trans "treten Sie Ihr bei" %}.</a>
+                {% trans "Sie sind noch kein Mitglied. Falls Sie sehen wollen, wer in Ihrer Umgebung Teil dieser Aktivität ist" %}, {% trans "treten Sie Ihr bei" %}.
             </p>
+            <a href="{% url 'activity:join' activity.name %}"><button class="blue-button">{% trans "Beitreten" %}</button></a>
         {% endif %}
     </p>
 
