--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -67,7 +67,7 @@ th, td {
     border: 2px solid white;
 }
 
-input[type=submit], a.button {
+input[type=submit], a.button, .blue-button {
     font-weight: bold;
     background: #0087f7;
     color: white;
@@ -75,6 +75,7 @@ input[type=submit], a.button {
     font-size: 14px;
     cursor: pointer;
     border-radius: 4px;
+    border: 1px solid transparent;
 }
 
 input, textarea {
@@ -87,7 +88,7 @@ input, textarea {
     outline: none;
 }
 
-input:focus, input:hover, textarea:hover, textarea:focus {
+input:focus, input:hover, textarea:hover, textarea:focus, .blue-button:hover {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
     border: 1px solid rgba(81, 203, 238, 1);
 }
