--- a/multiplayer/templates/multiplayer/lobby.html
+++ b/multiplayer/templates/multiplayer/lobby.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-{% block title %}{{ lobby }}{% endblock %}
+{% block title %}{{ activity }}-Lobby{% endblock %}
 {% block style %}
 {% include "css/lobby.css" %}
 {% endblock %}
