--- a/multiplayer/templates/multiplayer/match.html
+++ b/multiplayer/templates/multiplayer/match.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load account_tags %}
 
-{% block title %}Match{% endblock%}
+{% block title %}{{ match.activity }}-Match{% endblock%}
 
 {% block style%}{% include 'css/match.css' %}{% endblock %}
 
