--- a/multiplayer/templates/multiplayer/lobby.html
+++ b/multiplayer/templates/multiplayer/lobby.html
@@ -31,7 +31,7 @@
             </th>
         </tr>
         {% for match in user_matches.all %}
-            <tr style="background-color: green; cursor: pointer;" onclick="location.href='/multiplayer/match/{{ match.id }}/';">
+            <tr style="background-color: green; cursor: pointer;" onclick="location.href='/multiplayer/match/{{ match.activity.name }}/{{ match.id }}/';">
                 <td>
                     {% for user in match.member_list %}
                         {{ user }} 
