--- a/account/templates/style/sidemenu.css
+++ b/account/templates/style/sidemenu.css
@@ -14,6 +14,7 @@
     position: fixed;
     top: 50px;
     right: 0;
+    max-height: 80%;
     overflow: auto;
     z-index: 1000;
     max-width: 250px;
