--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Einloggen" %}{% endblock %}
 
 {% block content %}
-    <div class="center-container" style="position: absolute; left: 0;">
+    <div class="center-container">
     <div class="login">
         <h1>{% blocktrans %}Einloggen{% endblocktrans %}</h1>
         {% if form.errors %}
