--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -23,6 +23,10 @@ body {
     font-family: "Courier New", "Lucida Console", monospace;
 }
 
+.lang-select {
+    float: right;
+}
+
 input[type='text'], textarea, select:focus {
     font-size: 16px;
 }
