--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -18,7 +18,7 @@ body {
     left: 0px;
     right: 5px;
     bottom: 5px;
-    padding-left: 5px;
+    margin-left: 10px;
     color: white;
     font-family: "Courier New", "Lucida Console", monospace;
 }
