--- a/account/templates/account/about.html
+++ b/account/templates/account/about.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load account_tags %}
 
 {% block title %}{% trans "Info" %}{% endblock %}
 
@@ -16,4 +17,6 @@
                 <li>{% blocktrans %}Und vieles mehr.. einfach ausprobieren. Kostet ja nix.{% endblocktrans %}</li>
         </ol>
 </p>
+<p>{% trans "Klicken Sie auf den Beitreten-Button unten links um dem Audiochat eines Spiels beizutreten!" %}</p>
+<img src="{% locale_picture request 'game' %}">
 {% endblock %}
