--- a/account/templates/account/about.html
+++ b/account/templates/account/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% load account_tags %}
+{% load static %}
 
 {% block title %}{% trans "Info" %}{% endblock %}
 
