--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -14,7 +14,7 @@
         {% block style %}{% endblock %}
         {% include 'style/queries.css' %}
     </style>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/users-and-groups-group@32px.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
